--- a/courses/pcmi/2010/teran/notes/lecture2.tex
+++ b/courses/pcmi/2010/teran/notes/lecture2.tex
@@ -68,7 +68,7 @@ In practice, one can actually just ignore the Dirichlet boundary conditions when
 
 \item Compute the integral in \eqref{eq:poisson.system.Aij} when $\beta \equiv 1$. If you wish, for simplicitly, you may assume the $x_j$'s are equally spaced, i.e., $x_j = a + j h$, where $h = (b - a)/n$. What is the structure of the matrix $A$ (e.g., describe the sparsity)?
 
-\item Give an expression to reasonably approximate the integrals in \eqref{eq:poisson.system.Aij} and \eqref{eq:poisson.system.bi} for aribtrary $\beta$, $f$, and $q$ (assume $\beta$ and $f$ are sufficiently ``well-behaved''). You may have to consider boundary and interior grid vertices separately.
+\item Give an expression to reasonably approximate the integrals in \eqref{eq:poisson.system.Aij} and \eqref{eq:poisson.system.bi} for arbitrary $\beta$, $f$, and $q$ (assume $\beta$ and $f$ are sufficiently ``well-behaved''). You may have to consider boundary and interior grid vertices separately.
 
 \item Write some code (e.g., a Matlab script) to solve the following boundary value problem using linear finite elements:
 \begin{align*}
