--- a/courses/ucla/2011-2012/winter/math269b/homework1/solutions1.tex
+++ b/courses/ucla/2011-2012/winter/math269b/homework1/solutions1.tex
@@ -219,7 +219,6 @@ so $\abs{g} \leq 1$ if and only if $\abs{ak/h} \leq 1$.
 \textbf{Solution}
 
 Using the included code, the results of the following statements investigate the convergence of the Lax-Friedrichs scheme with the various initial conditions and $\lambda = 0.99$.
-
 \begin{verbatim}
 test_convergence( ...
     1, 1, @(x) sin(2*pi*x), ...
@@ -234,13 +233,11 @@ test_convergence( ...
     @lax_friedrichs, "Lax-Friedrichs", ...
     2.^(-(9:0.5:12)), @(h) 0.99*h);
 \end{verbatim}
-
 The numerical convergence rates, based on fitting a linear regression through a log-log plot of $h$ vs. $L^2$-error, are found to be, respectively, $1.06$, $0.80$, and $0.19$. For the smooth initial condition $u_0(x) = \sin(2 \pi x)$, the numerical convergence rate, $1.06$, agrees well with the theoretical convergence rate of $1$. The fact that the numerical convergence rates for the non-smooth initial conditions are significantly less than $1$ is not surprising given that our theoretical convergence analysis depended on the existence of some number of derivatives.
 
 Additionally, as predicted by theory, numerical evidence indicates that the Lax-Friedrichs scheme diverges if $\lambda > 1$ (and, still, $a = 1$), while the forward-time central-space scheme diverges for any $\lambda$, which is consistent with our theoretical analysis.
 
 We do get the forward-time central-space scheme to converge if, e.g., we let $k = h^2$, as demonstrated by the results of the following statements.
-
 \begin{verbatim}
 test_convergence( ...
     1, 1, @(x) sin(2*pi*x), ...
@@ -255,8 +252,7 @@ test_convergence( ...
     @ftcs, "forward-time central-space", ...
     2.^(-(5:0.5:8)), @(h) h*h);
 \end{verbatim}
-
-The numerical convergence rates are found to be $2.01$, $1.01$, and $0.23$, respectively, the former of which agrees with the theoretical rate of convergence of $2$. (Note that the last convergence test with discontinuous $u_0$ does not give a strong linear relationship in the log-log plot of $h$ vs. $L^2$-error.)
+The numerical convergence rates are found to be $2.01$, $1.01$, and $0.23$, respectively, the former of which agrees with the theoretical convergence rate of $2$. (Note that the last convergence test with discontinuous $u_0$ does not give a strong linear relationship in the log-log plot of $h$ vs. $L^2$-error.)
 
 \end{itemize}
 
