--- a/courses/ucla/2011-2012/winter/math269b/homework3/solutions3.tex
+++ b/courses/ucla/2011-2012/winter/math269b/homework3/solutions3.tex
@@ -101,7 +101,7 @@ converge to solutions to the corresponding modified equation
 \begin{equation*}
 u_t + a u_x = \frac{h^2}{2k} \left( 1 - \left( \frac{a k}{h} \right)^2 \right) u_{xx}
 \end{equation*}
-to second order accuracy in $L^{\infty}$. I.e., show that $\abs{v^n - u_{k,h} \left( t_n, \cdot \right)}_{\infty} \to 0$ (with $t_n = T$) as $h,k \to 0$ (according to the stability criterion), where the subscripts on $u_{k,h}$ only indicate that the solution to the modified equation is parameterized by $k,h$.
+to second order accuracy in $L^{\infty}$. I.e., show that $\norm{v^n - u_{k,h} \left( t_n, \cdot \right)}_{\infty} \to 0$ (with $t_n = T$) as $h,k \to 0$ (according to the stability criterion), where the subscripts on $u_{k,h}$ only indicate that the solution to the modified equation is parameterized by $k,h$.
 
 \textbf{Solution}
 
@@ -112,6 +112,21 @@ p_{k,h}(s,\xi) & = P_{k,h} \left( e^{skn + imh\xi} \right) / e^{skn + imh\xi} \\
                & = \frac{1}{k} \left( 1 + sk + \frac{1}{2} s^2 k^2 - 1 + \frac{1}{2} h^2 \xi^2 \right) + i \frac{a}{h} \left( h \xi \right) + O \left( k^2 + h^2 + h^4 k^{-1} \right) \\
                & = s + i a \xi + \frac{k}{2} s^2 + \frac{h^2}{2k} \xi^2 + O \left( k^2 + h^2 + h^4 k^{-1} \right).
 \end{align*}
+Thus, $p_{k,h}$ is within $O \left( h^2 \right)$ (assuming $k \sim h$) of the symbol
+\begin{equation*}
+\tilde{p}^{k,h}(s,\xi) := s + i a \xi + \frac{k}{2} s^2 + \frac{h^2}{2k} \xi^2,
+\end{equation*}
+which corresponds to the differential operator
+\begin{equation*}
+\tilde{P}^{k,h} \tilde{u} := \tilde{u}_t + a \tilde{u}_x + \frac{k}{2} \tilde{u}_{tt} - \frac{h^2}{2k} \tilde{u}_{xx}.
+\end{equation*}
+Observe also that the Lax-Friedrichs scheme $P_{k,h} v^n_m = 0$ is stable in $L^{\infty}$ (so long as $\abs{a\lambda} \leq 1$ with $\lambda := k/h$), hence $\norm{v^n - \tilde{u}_{k,h} \left( t_n, \cdot \right)}_{\infty} \to 0$ (with $t_n = T$) by the Lax-Richtmyer Equivalence Theorem, where $\tilde{u}_{k,h}$ satisfies $\tilde{P}^{k,h} \tilde{u}_{k,h} = 0$.
+
+It remains to compare $\tilde{u}_{k,h}$ from above with $u_{k,h}$ satisfying $P^{k,h} u_{k,h} = 0$, where
+\begin{equation*}
+P^{k,h} u := u_t + a u_x - \frac{1}{2} \left( \frac{h^2}{k} - a^2 k \right) u_{xx}.
+\end{equation*}
+Without going into too much detail, one can infer that $P^{k,h} \tilde{u}_{k,h} = O \left( h^2 \right)$ based on $\left( \tilde{u}_{k,h} \right)_{tt} = a^2 \left( \tilde{u}_{k,h} \right)_{xx} + O \left( h \right)$ and well-posedness of $\tilde{P}^{k,h} \tilde{u} = 0$ with respect to the coefficients of $\tilde{P}^{k,h}$. It follows then that $\norm{u^{k,h} \left( t^n, \cdot \right) - \tilde{u}^{k,h} \left( t^n, \cdot \right)}_{\infty} = O \left( h^2 \right)$ based on well-posedness of $P^{k,h} u = f$ with respect to $f$.
 
 \item[4.] (Strikwerda 4.1.2.) Show that the $(2,2)$ leapfrog scheme for $u_t + a u_{xxx} = f$ (see (2.2.15)) given by
 \begin{equation*}
