--- a/courses/ucla/2011-2012/winter/math269b/homework2/solutions2.tex
+++ b/courses/ucla/2011-2012/winter/math269b/homework2/solutions2.tex
@@ -207,15 +207,15 @@ We need only run the previous convergence tests for the forward-time central-spa
 test_convergence( ...
     1, 1, @(x) sin(2*pi*x), ...
     @ftcs, "forward-time central-space", ...
-    2.^(-(5:0.5:8)), @(h) h*h, "inf");
+    2.^(-(5:0.5:8)), @(h) h^2, "inf");
 test_convergence( ...
     1, 1, @(x) 1 - 2*abs(x - 1/2), ...
     @ftcs, "forward-time central-space", ...
-    2.^(-(5:0.5:8)), @(h) h*h, "inf");
+    2.^(-(5:0.5:8)), @(h) h^2, "inf");
 test_convergence( ...
     1, 1, @(x) (1 + sign(1/4 - abs(x - 1/2)))/2, ...
     @ftcs, "forward-time central-space", ...
-    2.^(-(5:0.5:8)), @(h) h*h, "inf");
+    2.^(-(5:0.5:8)), @(h) h^2, "inf");
 \end{verbatim}
 
 The numerical convergence rates are found to be $2.51$, $1.19$, and $0.36$, respectively. (Note that the last convergence test with discontinuous $u_0$ does not give a strong linear relationship in the log-log plot of $h$ vs. $L^2$-error.) Interestingly, these numerical convergence rates are all non-negligibly better than those for the $L^2$-error.
