--- a/courses/pcmi/2010/teran/notes/lecture3.tex
+++ b/courses/pcmi/2010/teran/notes/lecture3.tex
@@ -10,7 +10,7 @@ Since rigid body rotations do not change the physics of a deformable object, the
 \begin{equation}\label{eq:P.diagonalized}
 \bfP = \bfP \left( \bfV \right) = \bfU \bfP \left( \hat{\bfF} \right) \bfV^T = \bfU \hat{\bfP} \bfV^T
 \end{equation}
-where a hat superscript denotes the corresponding rotated quantity. Since the elastic energy of an isotropic material is invariant under world and material rotations, it can depend only on the invariants of $\bfF$, or equivalently on the entries of the diagonalization $\hat{\bfF}$ (see e.g. [BW97]). Therefore, the gradient of the energy, $\hat{\bssigma}$, will also be diagonal. Moreover, since the three stresses are related via $\hat{\bssigma} = (1/J) \hat{\bfP} \hat{\bfF}^T$ and $\hat{\bfP} = \hat{\bfF} \hat{\bfS}$, the diagonalization of $\bfF$ actually results in the simultaneous diagonalization of all three stresses. In particular, $\hat{\bfP}$ in equation
+where a hat superscript denotes the corresponding rotated quantity. Since the elastic energy of an isotropic material is invariant under world and material rotations, it can depend only on the invariants of $\bfF$, or equivalently on the entries of the diagonalization $\hat{\bfF}$. Therefore, the gradient of the energy, $\hat{\bssigma}$, will also be diagonal. Moreover, since the three stresses are related via $\hat{\bssigma} = (1/J) \hat{\bfP} \hat{\bfF}^T$ and $\hat{\bfP} = \hat{\bfF} \hat{\bfS}$, the diagonalization of $\bfF$ actually results in the simultaneous diagonalization of all three stresses. In particular, $\hat{\bfP}$ in equation
 \eqref{eq:P.diagonalized} is diagonal for an isotropic constitutive model. For an anisotropic constitutive model, a diagonal $\hat{\bfF}$ does not result in a diagonal $\hat{\bfP}$. However, this is not restrictive, and we show examples of anisotropic constitutive models later.
 
 The diagonalization of $\bfF$ is not unique, however. While the ordering of the entries of the diagonal matrix $\hat{\bfF}$ is unimportant, the signs of the entries determine whether the tetrahedron is inverted in a particular direction. The standard SVD convention of choosing all nonnegative entries works only when $\det \bfF \geq 0$. When $\det \bfF < 0$, the signs of the entries must be chosen carefully in order to guarantee that the forces act to uninvert the tetrahedron. In this case, $\hat{\bfF}$ has either one or three negative entries. We heuristically assume that each tetrahedron is as uninverted as possible, and thus we assume that only one entry (not three) is negative. Moreover, the entry with the smallest magnitude is chosen to be negative. This is motivated by the geometric fact that an inverted tetrahedron can be uninverted by moving any one node across the plane of the opposite face, and it is most efficient to choose the node that is closest to the opposite face.
